--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="./Assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
     <div class="wrapper">
+      <!-- Header -->
       <header>
         <h1>Password Generator</h1>
       </header>
+      <!-- Password Generator Box -->
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
@@ -25,11 +27,13 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+
+        <!-- Footer -->
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
-    <script src="./Assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
